# locust-test

hight_load_tests/: docker-compose.yaml  locust.dockerfile  main.py  pyproject.toml  start.sh
mock_api/: .dockerignore  api.dockerfile  main.py  pyproject.toml  start.sh
